--- a/pa-pojo/pom.xml
+++ b/pa-pojo/pom.xml
@@ -12,5 +12,11 @@
 
     <artifactId>pa-pojo</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
