--- a/pa-sellergoods-interface/pom.xml
+++ b/pa-sellergoods-interface/pom.xml
@@ -18,6 +18,18 @@
             <artifactId>pa-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.xiao</groupId>
+            <artifactId>pa-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.xiao</groupId>
+            <artifactId>pa-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
+
 
 </project>
