规格模块完成 生成模版模版

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>pa-sellergoods-service</module>
         <module>pa-manager-web</module>
         <module>pa-shop-web</module>
+        <module>GeneratorCode</module>
     </modules>
     <packaging>pom</packaging>
 
