--- a/pa-common/pom.xml
+++ b/pa-common/pom.xml
@@ -13,7 +13,11 @@
     <artifactId>pa-common</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.xiao</groupId>
+            <artifactId>pa-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
