--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
     <dependencyManagement>
         <dependencies>
 
+            <dependency>
+                <groupId>fastdfs_client</groupId>
+                <artifactId>fastdfs_client</artifactId>
+                <version>1.20</version>
+            </dependency>
+
             <!-- Spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
